apps/production/onedev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onedev-route
  namespace: onedev
spec:
  parentRefs:
    - name: kirintor-gateway
      sectionName: https
      namespace: kube-system
  hostnames:
    - "onedev.kirintor.benjaminmnoer.dk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: onedev
          port: 80
